--- a/examples/swr-site/pages/en/blog.mdx
+++ b/examples/swr-site/pages/en/blog.mdx
@@ -2,20 +2,34 @@
 searchable: false
 ---
 
-# Blog
-
 import Link from 'next/link'
+import { useRouter } from 'nextra/hooks'
 import { getPagesUnderRoute } from 'nextra/context'
 
-{getPagesUnderRoute('/blog').map(page => (
-  <div key={page.route}>
-    <Link
-      href={page.route}
-      className="text-2xl text-black hover:!no-underline dark:text-gray-100"
-    >
-      {page.meta.title || page.frontMatter?.title || page.name}
-    </Link>
-    <p>{page.frontMatter?.description}</p>
-    <p>{page.date}</p>
-  </div>
-))}
+export function Page() {
+  const { locale } = useRouter()
+  return getPagesUnderRoute(`/${locale}/blog`).map(page => (
+    <div key={page.route}>
+      <Link
+        href={page.route}
+        className="text-2xl text-black hover:!no-underline dark:text-gray-100"
+      >
+        {page.meta.title || page.frontMatter?.title || page.name}
+      </Link>
+      <p className="opacity-80 mt-6 leading-7">
+        {page.frontMatter?.description}
+        <Link
+          href={page.route}
+          className="block text-[color:hsl(var(--nextra-primary-hue),100%,50%)] underline underline-offset-2 decoration-from-font"
+        >
+          Read more →
+        </Link>
+      </p>
+      <p>{page.date}</p>
+    </div>
+  ))
+}
+
+# SWR Blog
+
+<Page />
